# winrsbox

./: .gitattributes  .gitignore  BENCH_RESULTS.md  CHANGELOG.md  LICENSE-APACHE  LICENSE-MIT  README.md  build.cmd  run.cmd
.github/workflows/: ci.yml
.winrsbox/winrsbox/: sandbox.ktav
.winrsbox/winrsbox/workdir/: policy.redb
docs/: investigation-2026-06-26-hermes-install.md  investigation-2026-06-26-sandbox-health.md  investigation-2026-06-26-tls-crash.md  investigation-2026-06-28-storage-engine.md
docs/checkpoints/: 2026-06-26-0030.md  2026-06-28-1200.md  2026-06-28-2111.md  2026-06-28-2120.md
repro/4395_pywin32/: diagnosis.txt  repro_rmdir.py  repro_rust_rmdir.rs
winrsbox/: Cargo.toml  README.md
winrsbox/docs/: PERFORMANCE.md  RECIPES.md  THREATMODEL.md
winrsbox/hook/: Cargo.toml
winrsbox/hook/benches/: cache.rs  decide_full.rs  inject_guard.rs  is_write.rs  memory_guard.rs  net_hooks.rs  path_traversal.rs  process_tracker.rs
winrsbox/hook/src/: alpc_guard.rs  anti_rec.rs  cache.rs  com_guard.rs  dir_filter.rs  fs_hooks.rs  fs_metadata_guard.rs  hooked_attrs.rs  hooks.rs  inject.rs  inject_guard.rs  ipc_client.rs  lib.rs  link_guard.rs  memory_guard.rs  net_hooks.rs  path_info_guard.rs  proc_guard.rs  process_tracker.rs  reg_hooks.rs  reg_overlay.rs  scan_cache.rs  service_guard.rs  shell_guard.rs  system_guard.rs  token_guard.rs  ui_guard.rs
winrsbox/integration-tests/: Cargo.toml
winrsbox/integration-tests/src/: main.rs
winrsbox/integration-tests/tests/: cli_workflow.rs  concurrent_children.rs  dev_e2e.rs  memory_guard.rs  mock_integration.rs  net_installer.rs  real_world.rs  reg_cli_workflow.rs
winrsbox/ipc/: Cargo.toml
winrsbox/ipc/benches/: msg.rs
winrsbox/ipc/src/: lib.rs
winrsbox/launcher/: Cargo.toml
winrsbox/launcher/benches/: etw.rs  mitigations.rs  shell.rs  wfp.rs
winrsbox/launcher/src/: env_guard.rs  etw.rs  etw_listener.rs  hot_stats.rs  inject.rs  jobctl.rs  jsonl_log.rs  lib.rs  main.rs  mitigations.rs  pipe_server.rs  sandbox.rs  session_section.rs  trust.rs  wfp.rs
winrsbox/launcher/src/cli/: defaults.rs  devrule.rs  doctor.rs  export.rs  id.rs  memdefaults.rs  mock.rs  mockdir.rs  mod.rs  netrule.rs  regdefaults.rs  regmock.rs  regrule.rs  regwhy.rs  rule.rs  shell.rs  why.rs
winrsbox/policy/: Cargo.toml
winrsbox/policy/benches/: decide.rs  dev.rs  mem.rs  net.rs  path.rs  reg.rs  scan.rs
winrsbox/policy/examples/: dump_overlay.rs
winrsbox/policy/proptest-regressions/: path.txt
winrsbox/policy/src/: db.rs  decide.rs  dev.rs  lib.rs  mem.rs  net.rs  path.rs  policy_impl.rs  reg.rs  reg_overlay.rs  registry.rs  scan.rs
winrsbox/scripts/: build-deploy.sh  compat-check.sh
