[workspace]
members = ["policy", "ipc", "hook", "launcher", "integration-tests"]
resolver = "2"

[profile.release]
panic = "abort"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
bincode = { version = "2", features = ["serde"] }
widestring = "1"

# Shared dev-dependencies (test/bench infra)
criterion = { version = "0.5", features = ["html_reports"] }
pretty_assertions = "1"
rstest = "0.23"
proptest = "1"
tempfile = "3"
