[package]
name = "hook"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
policy  = { path = "../policy" }
ipc     = { path = "../ipc" }

detour2    = { version = "0.9", default-features = false }
ntapi      = "0.4"
winapi     = { version = "0.3", features = [
    "winerror",
    "minwindef",
    "basetsd",
    "winnt",
    "processthreadsapi",
    "libloaderapi",
    "memoryapi",
    "handleapi",
    "synchapi",
    "fileapi",
    "processenv",
    "debugapi",
    "psapi",
    "winuser",
    "errhandlingapi",
    "winver",
] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }
once_cell  = "1"
widestring = { workspace = true }
quick_cache = "0.6"

[dev-dependencies]
criterion = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }
policy = { path = "../policy" }

[[bench]]
name = "cache"
harness = false

[[bench]]
name = "is_write"
harness = false

[[bench]]
name = "memory_guard"
harness = false

[[bench]]
name = "inject_guard"
harness = false

[[bench]]
name = "process_tracker"
harness = false

[[bench]]
name = "net_hooks"
harness = false

[[bench]]
name = "path_traversal"
harness = false

[[bench]]
name = "decide_full"
harness = false