[package]
name = "integration-tests"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "integration-tests"
path = "src/main.rs"

[[bin]]
name = "escape_alloc_rwx"
path = "src/bin/escape_alloc_rwx.rs"

[[bin]]
name = "escape_jit_protect"
path = "src/bin/escape_jit_protect.rs"

[[bin]]
name = "escape_heap_to_exec"
path = "src/bin/escape_heap_to_exec.rs"

[[bin]]
name = "escape_stack_exec"
path = "src/bin/escape_stack_exec.rs"

[[bin]]
name = "escape_map_anon_rwx"
path = "src/bin/escape_map_anon_rwx.rs"

[[bin]]
name = "escape_ntdll_double_map"
path = "src/bin/escape_ntdll_double_map.rs"

[[bin]]
name = "escape_remote_thread"
path = "src/bin/escape_remote_thread.rs"

[[bin]]
name = "clean_noop"
path = "src/bin/clean_noop.rs"

[[bin]]
name = "clean_normal_alloc"
path = "src/bin/clean_normal_alloc.rs"

[[bin]]
name = "clean_fileio"
path = "src/bin/clean_fileio.rs"

[[bin]]
name = "bypass_direct_syscall"
path = "src/bin/bypass_direct_syscall.rs"

[[bin]]
name = "clean_sleep"
path = "src/bin/clean_sleep.rs"

[[bin]]
name = "escape_foreign_alloc_rwx"
path = "src/bin/escape_foreign_alloc_rwx.rs"

[[bin]]
name = "escape_foreign_write_syscall"
path = "src/bin/escape_foreign_write_syscall.rs"

[[bin]]
name = "escape_reg_appinit"
path = "src/bin/escape_reg_appinit.rs"

[[bin]]
name = "escape_reg_ifeo"
path = "src/bin/escape_reg_ifeo.rs"

[[bin]]
name = "escape_reg_silentexit"
path = "src/bin/escape_reg_silentexit.rs"

[[bin]]
name = "escape_reg_service"
path = "src/bin/escape_reg_service.rs"

[[bin]]
name = "escape_thread_hijack"
path = "src/bin/escape_thread_hijack.rs"

[[bin]]
name = "escape_hwbp_injection"
path = "src/bin/escape_hwbp_injection.rs"

[[bin]]
name = "escape_apc_injection"
path = "src/bin/escape_apc_injection.rs"

[[bin]]
name = "escape_apc_ex"
path = "src/bin/escape_apc_ex.rs"

[[bin]]
name = "escape_net_rfc1918"
path = "src/bin/escape_net_rfc1918.rs"

[[bin]]
name = "escape_memory_bomb"
path = "src/bin/escape_memory_bomb.rs"

[[bin]]
name = "escape_dynamic_code"
path = "src/bin/escape_dynamic_code.rs"

[[bin]]
name = "escape_static_syscall"
path = "src/bin/escape_static_syscall.rs"

[[bin]]
name = "clean_jit_pattern"
path = "src/bin/clean_jit_pattern.rs"

[[bin]]
name = "legit_unpacker_sim"
path = "src/bin/legit_unpacker_sim.rs"

[[bin]]
name = "legit_self_patching"
path = "src/bin/legit_self_patching.rs"

[[bin]]
name = "escape_unpacker_syscall"
path = "src/bin/escape_unpacker_syscall.rs"

[[bin]]
name = "escape_self_modify_syscall"
path = "src/bin/escape_self_modify_syscall.rs"

[[bin]]
name = "escape_afd_direct"
path = "src/bin/escape_afd_direct.rs"

[[bin]]
name = "escape_systemquery_write"
path = "src/bin/escape_systemquery_write.rs"

[[bin]]
name = "escape_junction"
path = "src/bin/escape_junction.rs"

[[bin]]
name = "escape_hardlink"
path = "src/bin/escape_hardlink.rs"

[[bin]]
name = "escape_alpc_com"
path = "src/bin/escape_alpc_com.rs"

[[bin]]
name = "escape_token_priv"
path = "src/bin/escape_token_priv.rs"

[[bin]]
name = "escape_fs_system_write"
path = "src/bin/escape_fs_system_write.rs"

[[bin]]
name = "escape_cow_isolation"
path = "src/bin/escape_cow_isolation.rs"

[[bin]]
name = "escape_smb_egress"
path = "src/bin/escape_smb_egress.rs"

[[bin]]
name = "escape_pipe_scm"
path = "src/bin/escape_pipe_scm.rs"

[[bin]]
name = "escape_shadow_copy"
path = "src/bin/escape_shadow_copy.rs"

[[bin]]
name = "escape_raw_disk"
path = "src/bin/escape_raw_disk.rs"

[[bin]]
name = "escape_localhost"
path = "src/bin/escape_localhost.rs"

[[bin]]
name = "debug_cmdline"
path = "src/bin/debug_cmdline.rs"

[[bin]]
name = "escape_lolbas_regsvr32"
path = "src/bin/escape_lolbas_regsvr32.rs"

[[bin]]
name = "escape_sendinput"
path = "src/bin/escape_sendinput.rs"

[[bin]]
name = "escape_keybd_event"
path = "src/bin/escape_keybd_event.rs"

[[bin]]
name = "escape_clipboard"
path = "src/bin/escape_clipboard.rs"

[[bin]]
name = "escape_inject_remote"
path = "src/bin/escape_inject_remote.rs"

[[bin]]
name = "escape_spawn_wsl"
path = "src/bin/escape_spawn_wsl.rs"

[[bin]]
name = "escape_spawn_wmic"
path = "src/bin/escape_spawn_wmic.rs"

[[bin]]
name = "escape_parent_spoof"
path = "src/bin/escape_parent_spoof.rs"

[[bin]]
name = "escape_com_shell"
path = "src/bin/escape_com_shell.rs"

[[bin]]
name = "escape_com_wscript"
path = "src/bin/escape_com_wscript.rs"

[[bin]]
name = "escape_com_wmi"
path = "src/bin/escape_com_wmi.rs"

[[bin]]
name = "escape_com_taskscheduler"
path = "src/bin/escape_com_taskscheduler.rs"

[[bin]]
name = "escape_globalroot"
path = "src/bin/escape_globalroot.rs"

[[bin]]
name = "escape_ads"
path = "src/bin/escape_ads.rs"

[[bin]]
name = "escape_short_name"
path = "src/bin/escape_short_name.rs"

[[bin]]
name = "escape_file_by_id"
path = "src/bin/escape_file_by_id.rs"

[[bin]]
name = "escape_job_reassign"
path = "src/bin/escape_job_reassign.rs"

[[bin]]
name = "escape_job_breakaway"
path = "src/bin/escape_job_breakaway.rs"

[[bin]]
name = "escape_token_open"
path = "src/bin/escape_token_open.rs"

[[bin]]
name = "escape_token_duplicate"
path = "src/bin/escape_token_duplicate.rs"

[[bin]]
name = "escape_token_impersonate"
path = "src/bin/escape_token_impersonate.rs"

[[bin]]
name = "escape_dll_sideload"
path = "src/bin/escape_dll_sideload.rs"

[[bin]]
name = "escape_com_classobject"
path = "src/bin/escape_com_classobject.rs"

[[bin]]
name = "escape_winrsbox_read"
path = "src/bin/escape_winrsbox_read.rs"

[[bin]]
name = "escape_winrsbox_enum"
path = "src/bin/escape_winrsbox_enum.rs"

[[bin]]
name = "escape_scm_open"
path = "src/bin/escape_scm_open.rs"

[[bin]]
name = "escape_service_changeconfig"
path = "src/bin/escape_service_changeconfig.rs"

[[bin]]
name = "escape_rename_outside_sandbox"
path = "src/bin/escape_rename_outside_sandbox.rs"

[[bin]]
name = "escape_hardlink_to_host"
path = "src/bin/escape_hardlink_to_host.rs"

[[bin]]
name = "escape_reparse_create"
path = "src/bin/escape_reparse_create.rs"

[[bin]]
name = "escape_setinfo_process"
path = "src/bin/escape_setinfo_process.rs"

[[bin]]
name = "escape_pipe_impersonate"
path = "src/bin/escape_pipe_impersonate.rs"

[[test]]
name = "mock_integration"
path = "tests/mock_integration.rs"

[[test]]
name = "memory_guard"
path = "tests/memory_guard.rs"

[[test]]
name = "real_world"
path = "tests/real_world.rs"

[dependencies]
policy = { path = "../policy" }
serde_json = "1"
winapi = { version = "0.3", features = ["memoryapi", "winnt", "processthreadsapi", "libloaderapi", "errhandlingapi", "tlhelp32", "handleapi", "winreg", "minwindef", "fileapi", "ioapiset", "processenv", "winuser", "synchapi", "winbase", "jobapi2", "combaseapi", "winsvc", "namedpipeapi", "securitybaseapi"] }
ntapi = "0.4"

[dev-dependencies]
tempfile = { workspace = true }
pretty_assertions = { workspace = true }
serial_test = { workspace = true }
assert_cmd = "2"
predicates = "3"
winrsbox = { path = "../launcher" }
