[package]
name = "winrsbox"
version = "0.1.0"
edition = "2021"
description = "Windows filesystem sandbox for AI agents (CoW overlay, ntdll-level hooks)"
license = "MIT"
repository = "https://github.com/klyde13/winrsbox"

[[bin]]
name = "winrsbox"
path = "src/main.rs"

[dependencies]
policy = { path = "../policy" }
ipc = { path = "../ipc" }
tokio = { version = "1", features = ["full"] }
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_Memory",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Pipes",
    "Win32_System_IO",
    "Win32_System_Environment",
    "Win32_Storage_FileSystem",
    "Win32_Security",
    "Win32_System_Console",
    "Win32_UI_WindowsAndMessaging",
] }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
base64 = "0.22"
serde = { workspace = true }
serde_json = "1"
redb = "2"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
ktav = "=0.3.1"
crossbeam-queue = "0.3"
papaya = "0.2.4"
rustc-hash = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
