[package]
name = "policy"
version = "0.1.0"
edition = "2021"

[dependencies]
redb = "2"
serde = { workspace = true }
bincode = { workspace = true }
ktav = "=0.3.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
quick_cache = "0.6"
widestring = { workspace = true }
thiserror = "1"
arc-swap = "1.9.1"
rustc-hash.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "decide"
harness = false

[[bench]]
name = "path"
harness = false
