[package]
name = "policy"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
redb = "2"
serde = { workspace = true }
bincode = { workspace = true }
ktav = "=0.6.1"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
quick_cache = "0.6"
widestring = { workspace = true }
thiserror = "1"
arc-swap = "1.9.1"
rustc-hash.workspace = true
iced-x86 = { version = "1", default-features = false, features = ["std", "decoder"] }
serde_json = "1.0.149"
base64 = "0.22.1"

[dev-dependencies]
tempfile = { workspace = true }
criterion = { workspace = true }
pretty_assertions = { workspace = true }
rstest = { workspace = true }
proptest = { workspace = true }

[[bench]]
name = "decide"
harness = false

[[bench]]
name = "path"
harness = false

[[bench]]
name = "scan"
harness = false

[[bench]]
name = "reg"
harness = false

[[bench]]
name = "dev"
harness = false

[[bench]]
name = "net"
harness = false

[[bench]]
name = "mem"
harness = false
